на главной странице убран лишний футер

--- a/style.scss
+++ b/style.scss
@@ -948,7 +948,7 @@ $img-dark-clock: "dark-clock.svg";
 }
 
 .mobile-bt {
-    display: non;
+    display: none;
 }
 
 .ideas-tablet-first-tablet-img {
